[package]
name = "miniquad"
version = "0.3.0-alpha.46"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/miniquad"
repository = "https://github.com/not-fl3/miniquad"
description = """
Cross-platform window context and rendering library.
"""
readme="README.md"
keywords = ["graphics", "3D", "opengl", "gamedev", "windowing"]
categories = ["rendering::graphics-api"]

[dependencies]
gl = "0.14.0"
clipboard = "0.5.0"

[dev-dependencies]
glam = {version = "0.14", features = ["scalar-math"] }
quad-rand = "0.1"